overflow fix

--- a/style.scss
+++ b/style.scss
@@ -210,9 +210,6 @@ color: #D9D9D9;
     &__description{
       padding: 1rem 4rem 0 4rem;
       p{
-        // text-align: center;
-        // font-weight: 30 rem;
-        // font-size: $rem*1;
         font-family: Montserrat;
         font-size: 18px;
         font-weight: 500;
@@ -296,6 +293,9 @@ color: #D9D9D9;
             justify-content: center;
           }
         }
+    &--project{
+      overflow: hidden;
+    }
 
     &--git{
     height:$rem*3 ;
@@ -352,16 +352,16 @@ color: #D9D9D9;
     letter-spacing: 0.77px;
     cursor: pointer;
 
-    &--market{
-      background-color: #282C34;
-      @include flexbox(row, center, center);
-      padding: 0.6rem 1rem;
-      gap: 0.4rem;
+    // &--market{
+    //   background-color: #282C34;
+    //   @include flexbox(row, center, center);
+    //   padding: 0.6rem 1rem;
+    //   gap: 0.4rem;
 
-      p{
-        color: #1C1C1E;
-      }
-    }
+    //   p{
+    //     color: #1C1C1E;
+    //   }
+    // }
 
     &--event {
         background-color: #f2f2f7;
